[package]
name = "filetime"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.2.10"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["timestamp", "mtime"]
repository = "https://github.com/alexcrichton/filetime"
homepage = "https://github.com/alexcrichton/filetime"
documentation = "https://docs.rs/filetime"
description = """
Platform-agnostic accessors of timestamps in File metadata
"""
edition = "2018"

[dependencies]
cfg-if = "0.1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = '0.3', features = ['fileapi', 'minwindef', 'winbase'] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
